--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.test
+.env.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
